###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
"""Bazel module definition for my_grpc_project"""

module(
    name = "yuanrong-datasystem",
    version = "0.7.0",
)

# 依赖规则集
bazel_dep(name = "rules_cc", version = "0.1.5")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "pybind11_bazel", version = "2.11.1")
bazel_dep(name = "protobuf", version = "25.5", repo_name = "com_google_protobuf")

# gRPC 依赖
bazel_dep(name = "grpc", version = "1.69.0", repo_name = "com_github_grpc_grpc")
single_version_override(
    module_name = "grpc",
    patch_strip = 1,
    patches = ["//third_party/patches/grpc:1.69.0/grpc_1_69_0_bzl.patch"],
    version = "1.69.0",
)

bazel_dep(name = "glog", version = "0.7.0", repo_name = "com_github_google_glog")
bazel_dep(name = "boringssl", version = "0.20240930.0")

# 其他依赖
bazel_dep(name = "abseil-cpp", version = "20240722.1")
bazel_dep(name = "googletest", version = "1.12.1")

#bazel_dep(name = "openssl", version = "3.3.1.bcr.9")
bazel_dep(name = "re2", version = "2024-06-01")

#bazel_dep(name = "jemalloc", version = "5.3.0-bcr.alpha.4")
bazel_dep(name = "cjson", version = "1.7.19-0.20240923110858-12c4bf1986c2.bcr.3")

#bazel_dep(name = "spdlog", version = "1.12.0")
#bazel_dep(name = "onetbb", version = "2021.13.0")
# bazel_dep(name = "libzmq", version = "4.3.5.bcr.4")
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1")
bazel_dep(name = "c-ares", version = "1.19.1")
bazel_dep(name = "rocksdb", version = "9.10.0")
bazel_dep(name = "zlib", version = "1.3.1")
bazel_dep(name = "curl", version = "8.11.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.15.3")
